--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-g-list/js/config.js
-g-list/node_modules
-g-list/package-lock.json
-g-list/package.json
+config.js
+node_modules
+package-lock.json
+package.json
