--- a/g-list/package.json
+++ b/g-list/package.json
@@ -1,6 +1,8 @@
 {
+  "type": "module" ,
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2" 
   }
 }
