--- a/g-list/package.json
+++ b/g-list/package.json
@@ -1,8 +1,18 @@
 {
-  "type": "module" ,
+ 
   "dependencies": {
-    "dotenv": "^16.4.5",
-    "express": "^4.21.1",
-    "node-fetch": "^3.3.2" 
+ 
+   
+  "cors": "^2.8.5",
+ 
+   
+  "dotenv": "^16.4.5",
+ 
+   
+  "express": "^4.21.1",
+ 
+   
+  "node-fetch": "^3.3.2"
+ 
   }
 }
